# holochain-wasmer

crates/common/: Cargo.toml
crates/guest/: Cargo.toml
crates/host/: Cargo.toml
test/: Cargo.toml
test/common/: Cargo.toml
test/test_wasm/: Cargo.toml
test/wasm_io/: Cargo.toml
test/wasm_memory/: Cargo.toml
