[package]
name = "holochain_wasmer_common"
description = "commons for both host and guest"
license = "Apache-2.0"
version = "0.0.95"
authors = ["thedavidmeister", "thedavidmeister@gmail.com"]
edition = "2021"

[dependencies]
holochain_serialized_bytes = { version = "=0.0.55", git = "https://github.com/coasys/holochain-serialization.git", rev = "f9577913773931ec797261f90968903b1b4e27a8"}
serde = "1.0.98"
thiserror = "1"
serde_bytes = "0.11"
test-fuzz = "=3.0.4"

[features]
default = []
error_as_host = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmer = "=4.3.1"
