[package]
name = "holochain_wasmer_guest"
description = "wasm guest code"
license = "Apache-2.0"
version = "0.0.95"
authors = ["thedavidmeister", "thedavidmeister@gmail.com"]
edition = "2021"

[workspace]

[lib]
name = "holochain_wasmer_guest"
crate-type = ["cdylib", "rlib"]
path = "src/guest.rs"

[dependencies]
holochain_serialized_bytes = { version = "=0.0.55", git = "https://github.com/coasys/holochain-serialization.git", rev = "f9577913773931ec797261f90968903b1b4e27a8"}
holochain_wasmer_common = { version = "=0.0.95", path = "../common" }
serde = "1.0.98"
tracing = "0.1"
parking_lot = "0.12"
paste = "1.0"

[dev-dependencies]
test-fuzz = "=3.0.4"
