[package]
name = "holochain_wasmer_host"
description = "wasm host code"
license = "Apache-2.0"
version = "0.0.95"
authors = ["thedavidmeister", "thedavidmeister@gmail.com"]
edition = "2021"

[dependencies]
wasmer = { version = "=4.3.3", git="https://github.com/fayeed/wasmer.git", rev = "ecc5593b62040fbec4e960ecf636e0f2c89bce08"}
wasmer-middlewares = "=4.3.3"
holochain_wasmer_common = { version = "=0.0.95", path = "../common" }
holochain_serialized_bytes = { version = "=0.0.55", git = "https://github.com/coasys/holochain-serialization.git", rev = "f9577913773931ec797261f90968903b1b4e27a8"}
serde = "1.0.98"
tracing = "0.1"
parking_lot = "0.12"
rand = "0.8"
bimap = "0.6"
bytes = "1"
hex = "0.4"

[lib]
name = "holochain_wasmer_host"
crate-type = ["cdylib", "rlib"]
path = "src/host.rs"

[features]
default = ["error_as_host"]
debug_memory = []
error_as_host = ["holochain_wasmer_common/error_as_host"]
