[package]
name = "holochain_wasmer_host"
description = "wasm host code"
license = "Apache-2.0"
version = "0.0.94"
authors = ["thedavidmeister", "thedavidmeister@gmail.com"]
edition = "2021"

[dependencies]
wasmer = "=4.2.8"
wasmer-middlewares = "=4.2.8"
holochain_wasmer_common = { version = "=0.0.94", path = "../common" }
holochain_serialized_bytes = { version = "=0.0.54", git = "https://github.com/coasys/holochain-serialization.git", rev = "e922b503d8230b35e725709603e672541d269fff" }
serde = "1.0.98"
tracing = "0.1"
parking_lot = "0.12"
rand = "0.8"
bimap = "0.6"
bytes = "1"
hex = "0.4"

[lib]
name = "holochain_wasmer_host"
crate-type = ["cdylib", "rlib"]
path = "src/host.rs"

[features]
default = ["error_as_host"]
debug_memory = []
error_as_host = ["holochain_wasmer_common/error_as_host"]
